--- a/package.json
+++ b/package.json
@@ -7,20 +7,22 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start" : "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node  app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^5.1.0",
     "bcryptjs": "^3.0.2",
+    "compression": "^1.8.0",
+    "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
@@ -31,9 +33,11 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "redis": "^5.1.1",
+    "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "xss-clean": "^0.1.4"
   }
 }
