--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-manager-api",
+  "name": "Take your tour API ",
   "version": "1.0.0",
   "description": "Project learning for Nodejs, express, mongoDB",
   "license": "ISC",
@@ -18,12 +18,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
-    "hpp": "^0.2.3",
-    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
     "mongodb": "^6.16.0",
@@ -38,7 +37,6 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.15",
-    "winston": "^3.17.0",
-    "xss-clean": "^0.1.4"
+    "winston": "^3.17.0"
   }
 }
