--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
-  "name": "Take your tour API ",
+  "name": "Take your tour API Management",
   "version": "1.0.0",
-  "description": "Project learning for Nodejs, express, mongoDB",
-  "license": "ISC",
-  "author": "Jordan Larcher",
-  "type": "commonjs",
-  "main": "index.js",
+  "description": "Learning node, express and mongoDB",
+  "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
+  "author": "Jordan Larcher",
+  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "compression": "^1.8.0",
-    "cookie-parser": "^1.4.7",
-    "cookie-session": "^2.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.5.0",
-    "express-session": "^1.18.1",
-    "express-validator": "^7.2.1",
-    "helmet": "^8.1.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "express-mongo-sanitize": "^1.3.2",
+    "express-rate-limit": "^3.5.0",
+    "helmet": "^3.16.0",
+    "hpp": "^0.2.2",
+    "jest": "^30.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongo": "^0.1.0",
-    "mongodb": "^6.16.0",
-    "mongoose": "^8.15.1",
-    "morgan": "^1.10.0",
-    "multer": "^2.0.0",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "redis": "^5.1.1",
-    "slugify": "^1.6.6",
-    "socket.io": "^4.8.1",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
+    "mongoose": "^8.15.2",
+    "morgan": "^1.9.1",
+    "nodemailer": "^6.1.1",
+    "nodemon": "^3.1.10",
+    "slugify": "^1.3.4",
     "validator": "^13.15.15",
-    "winston": "^3.17.0"
+    "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "prettier": "^1.17.0"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
