--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^3.1.10",
     "slugify": "^1.3.4",
     "validator": "^13.15.15",
+    "winston": "^3.17.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
