--- a/package.json
+++ b/package.json
@@ -1,46 +1,51 @@
 {
-  "name": "Take your tour API Management",
+  "name": "Take your tour API",
   "version": "1.0.0",
-  "description": "Learning node, express and mongoDB",
-  "main": "app.js",
+  "description": "Learning Node, Express and MongoDB",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "ndb server.js"
+    "dev": "nodemon server.js",
+    "build:js": "parcel build ./public/js/index.js --dist-dir ./public/js --target browser",
+    "watch:js": "parcel watch ./public/js/index.js --dist-dir ./public/js --target browser"
   },
   "author": "Jordan Larcher",
-  "license": "ISC",
+  "license": "MIT",
+  "engines": {
+    "node": ">=16 <25"
+  },
   "dependencies": {
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "express-mongo-sanitize": "^1.3.2",
-    "express-rate-limit": "^3.5.0",
-    "helmet": "^3.16.0",
-    "hpp": "^0.2.2",
-    "jest": "^30.0.0",
+    "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.0.0",
+    "helmet": "^6.0.1",
+    "hpp": "^0.2.3",
+    "html-to-text": "^9.0.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.2",
-    "morgan": "^1.9.1",
-    "nodemailer": "^6.1.1",
-    "nodemon": "^3.1.10",
-    "slugify": "^1.3.4",
+    "mongoose": "^8.16.0",
+    "morgan": "^1.10.0",
+    "multer": "^2.0.1",
+    "nodemailer": "^6.9.3",
+    "pug": "^3.0.3",
+    "sanitize-html": "^2.17.0",
+    "sharp": "^0.34.2",
+    "slugify": "^1.6.6",
+    "stripe": "^12.0.0",
     "validator": "^13.15.15",
-    "winston": "^3.17.0",
-    "xss-clean": "^0.1.1"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "prettier": "^1.17.0"
-  },
-  "engines": {
-    "node": ">=10.0.0"
+    "eslint": "^8.35.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "nodemon": "^3.0.1",
+    "parcel": "^2.9.3"
   }
 }
