--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "html-to-text": "^9.0.3",
+    "jest": "^30.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "morgan": "^1.10.0",
@@ -38,6 +39,8 @@
     "sharp": "^0.34.2",
     "slugify": "^1.6.6",
     "stripe": "^12.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.15",
     "winston": "^3.17.0"
   },
